kubernetes/shop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-app
  labels:
    app: shop
spec:
	replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
        - image: localhost:5000/shop
          name: shop
          ports:
            - containerPort: 8001
