kubernetes/shop/shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
  labels:
    app: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-container
  template:
    metadata:
      labels:
        app: shop-container
    spec:
      containers:
        - image: localhost:5000/shop
          imagePullPolicy: Never
          name: shop
          ports:
            - containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-database-container
  template:
    metadata:
      labels:
        app: shop-database-container
        tier: backend
    spec:
      containers:
        - name: shop-database-container
          image: postgres:14.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: shop-database-volume-mount
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: shop-database-volume-mount
          persistentVolumeClaim:
            claimName: shop-pvc
