kubernetes/shop/shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-service
  labels:
    app: shop
spec:
  type: NodePort
  selector:
    app: shop
  ports:
    - port: 8001
      targetPort: 8001
---
kind: Service
apiVersion: v1
metadata:
  name: shop-database-service
spec:
  selector:
    app: shop-database-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
