kubernetes/shop/shop-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shop-ingress
spec:
  rules:
  - host: shop.local
    http:
      paths:
      - backend:
          serviceName: shop-service
          servicePort: 8001
